[package]
name = "gluc-cgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
config = "0.11"
actix-web = {git = "https://github.com/actix/actix-web.git", tag = "web-v4.0.0-beta.21"}
log = "0.4"
env_logger = "0.9"
mongodb = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
#lazy_static = "1.4.0"
once_cell = "1.9"
anyhow = "1.0"
thiserror = "1.0"
strum = "0.23"
strum_macros = "0.23"
sha-1 = "0.7"