[package]
name = "gluc-cgm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
config = "0.11"
actix-web = "4"
# log = "0.4"
mongodb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
#lazy_static = "1.4.0"
once_cell = "1.9"
anyhow = "1.0"
thiserror = "1.0"
strum = "0.23"
strum_macros = "0.23"
sha-1 = "0.7"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
